# SPDX-FileCopyrightText: 2021 - 2023 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "repvar"
version = "0.14.2"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """
    A tiny CLI tool that replaces variables of the style `${KEY}`
    in text with their respective value.
    It can also be used as a rust library.
    """
repository = "https://github.com/hoijui/repvar"
homepage = "https://github.com/hoijui/repvar"
keywords = ["cli", "utility", "variables", "replace"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
edition = "2021"

[features]
# This requires unsafe code
flush_to_env = [] # feature has no explicit dependencies

[lints.rust]
rust_2021_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "warn"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
cli_utils = { version = "0.10", features = ["logging"], package = "cli_utils_hoijui" }
const_format = "0.2"
dotenvy = "0.15"
env_logger = { version = "0.11", default-features = false }
git-version = "0.3"
regex = "1.11"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
typed-builder = "0.21"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
